{
    "name": "ShipControls",
    "maps": [
        {
            "name": "Movement",
            "id": "8b8589fd-336f-4627-8da5-6123bdf769e2",
            "actions": [
                {
                    "name": "UpPressed",
                    "type": "Value",
                    "id": "b195a8e9-c4b5-48b9-a89c-55f5bad210e0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "UpReleased",
                    "type": "Value",
                    "id": "db7629c6-07e3-467c-b6b7-f67245c73a66",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=1)"
                },
                {
                    "name": "LeftPressed",
                    "type": "Value",
                    "id": "4628703e-cdd6-4ab6-9a9e-75365bc7814a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "LeftReleased",
                    "type": "Value",
                    "id": "cdc80e04-7465-4e5b-a189-8686c6a0f6bc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=1)"
                },
                {
                    "name": "DownReleased",
                    "type": "Value",
                    "id": "9b7a036b-221d-4c34-a86e-57a8defb67f9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=1)"
                },
                {
                    "name": "DownPressed",
                    "type": "Value",
                    "id": "e90aeda3-6135-4647-9979-dc04f5ccebd2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "RightPressed",
                    "type": "Value",
                    "id": "e0e5a043-9fbe-4c5b-a11f-8c14265e04a7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "RightReleased",
                    "type": "Value",
                    "id": "c41ea025-fce6-4e29-b872-2ea7c94e5dca",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=1)"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8212cc53-b316-4c98-82ab-d9c65f3d956b",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6a436ac2-eb69-418e-9444-8dabf4590338",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "93233c66-fd52-49b5-a2c3-c99a55d47b96",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controls",
                    "action": "LeftReleased",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "637cdbcd-9bfe-4752-bc2c-47d556b95001",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controls",
                    "action": "LeftReleased",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0fa1ae6c-68ec-476e-a93b-81ac96364eb4",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controls",
                    "action": "LeftPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ca980dea-7acb-4b01-b763-69337d8b8aae",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controls",
                    "action": "LeftPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d454d8fe-e929-483e-ac78-c3fe5ab53296",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controls",
                    "action": "RightPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "190dad95-7aba-4d3a-b345-23d43e40fcba",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controls",
                    "action": "RightPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7416c10c-4666-42a1-897f-49c6c48b0da1",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controls",
                    "action": "UpReleased",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b29472c4-372c-42c0-945a-40483a0dbab2",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controls",
                    "action": "UpReleased",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d1f0b24a-056d-462d-a1e3-749ed0768da1",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controls",
                    "action": "DownReleased",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "20f583e4-3a74-4253-8804-410e84cc2c0c",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controls",
                    "action": "DownReleased",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0d115d5b-5805-4064-abed-90a37a072942",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controls",
                    "action": "RightReleased",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "57e4f7f3-e5a4-49b2-b0ab-f9c08efaa7d0",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controls",
                    "action": "RightReleased",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "faf317b8-10be-47d3-bd21-e1e0532907a2",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controls",
                    "action": "DownPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dd003ec9-c103-410d-a080-cbf8c46b6719",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controls",
                    "action": "DownPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Controls",
            "bindingGroup": "Controls",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        }
    ]
}